--- a/package.json
+++ b/package.json
@@ -1,41 +1,95 @@
 {
   "name": "react-viewerbase",
-  "version": "0.0.1",
-  "description": "A set of React components for Medical Imaging Viewers.",
-  "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/OHIF/react-viewerbase.git"
-  },
-  "keywords": [
-    "dicom",
-    "cornerstone",
-    "react",
-    "reactjs"
-  ],
-  "author": "Open Health Imaging Foundation (http://github.com/OHIF)",
+  "version": "0.1.0",
+  "description": "Cornerstone medical image viewport component for React",
+  "author": "Cornerstone Contributors",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/OHIF/react-viewerbase/issues"
+  "repository": "cornerstonejs/react-viewerbase",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "jsnext:main": "dist/index.es.js",
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
   },
-  "homepage": "https://github.com/OHIF/react-viewerbase",
+  "scripts": {
+    "test": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:watch": "react-scripts test --env=jsdom",
+    "build": "rollup -c",
+    "start": "rollup -c -w",
+    "prepare": "npm run build",
+    "predeploy": "cd example && npm install && npm run build",
+    "deploy": "gh-pages -d example/build",
+    "generateStaticSite": "./generateStaticSite.sh"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.5.4",
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0"
+  },
   "devDependencies": {
-    "babel-core": "6.7.4",
-    "babel-eslint": "6.0.0",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "~6.6.0",
-    "babel-preset-react": "~6.5.0",
-    "eslint": "2.5.1",
-    "eslint-plugin-react": "4.2.3",
-    "react-hot-loader": "1.3.0",
-    "webpack": "1.12.14",
-    "webpack-dev-server": "1.14.1"
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@svgr/rollup": "^4.1.0",
+    "babel-eslint": "9.0.0",
+    "cross-env": "^5.1.4",
+    "eslint": "5.6.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-react": "^7.10.0",
+    "gh-pages": "^2.0.1",
+    "husky": "^1.1.3",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.14.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "^2.1.1",
+    "rollup": "^0.67.4",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-url": "^2.1.0",
+    "stylelint": "^9.9.0",
+    "stylelint-config-recommended": "^2.1.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "react": "0.14.7",
-    "react-dom": "0.14.7"
+    "cornerstone-core": "2.2.8",
+    "cornerstone-math": "0.1.7",
+    "cornerstone-tools": "3.0.0-b.1471",
+    "cornerstone-wado-image-loader": "2.2.3",
+    "dicom-parser": "1.8.3",
+    "hammerjs": "^2.0.8",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.22.2",
+    "stylus": "^0.54.5"
   }
 }
