--- a/example/package.json
+++ b/example/package.json
@@ -14,9 +14,9 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-viewerbase": "link:..",
     "react-dom": "^16.4.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-viewerbase": "git+https://github.com/OHIF/react-viewerbase.git"
   },
   "scripts": {
     "copy:webworkers": "cp node_modules/cornerstone-wado-image-loader/dist/*.min.js* public",
