--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "dist"
   ],
   "dependencies": {
+    "classnames": "^2.2.6",
     "cornerstone-core": "2.2.8",
     "cornerstone-math": "0.1.7",
     "cornerstone-tools": "3.0.0-b.1471",
