--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "hammerjs": "^2.0.8",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.22.2",
+    "react-bootstrap": "^0.32.4",
     "stylus": "^0.54.5"
   }
 }
