--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^2.1.0",
     "stylelint": "^9.9.0",
-    "stylelint-config-recommended": "^2.1.0"
+    "stylelint-config-recommended": "^2.1.0",
+    "stylus": "^0.54.5"
   },
   "husky": {
     "hooks": {
@@ -80,16 +81,6 @@
     "dist"
   ],
   "dependencies": {
-    "classnames": "^2.2.6",
-    "cornerstone-core": "2.2.8",
-    "cornerstone-math": "0.1.7",
-    "cornerstone-tools": "3.0.0-b.1471",
-    "cornerstone-wado-image-loader": "2.2.3",
-    "dicom-parser": "1.8.3",
-    "hammerjs": "^2.0.8",
-    "lodash.debounce": "^4.0.8",
-    "moment": "^2.22.2",
-    "react-bootstrap": "^0.32.4",
-    "stylus": "^0.54.5"
+    "classnames": "^2.2.6"
   }
 }
