--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "dist"
   ],
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "react-paginate": "^6.0.0"
   }
 }
