--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "dist"
   ],
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "react-modal-bootstrap": "^1.1.1"
   }
 }
