--- a/package.json
+++ b/package.json
@@ -82,6 +82,6 @@
   ],
   "dependencies": {
     "classnames": "^2.2.6",
-    "react-modal-bootstrap": "^1.1.1"
+    "react-bootstrap-modal": "^4.2.0"
   }
 }
