--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
   ],
   "dependencies": {
     "classnames": "^2.2.6",
-    "react-bootstrap-modal": "^4.2.0",
-    "react-simple-popover": "^0.2.4"
+    "react-bootstrap-modal": "^4.2.0"
   }
 }
