User preferences (Hotkeys and Window Level settings). (#10)
* Removing old studylist (empty component)

* Adding bootstrap-modal library

* Hotkeys handling

* Adding some style on hotkeys preferences

* Adding labels and refactoring hotkeys state structure

* Adding window level preferences form

* Styling user preferences

* Error messages on hotkeys preferences

* Adding user preferences modal and modal styling

* Adding parameters on user preferences components

* Reseting and close button

* Styling user preferences modal

* Hotkeys in two columns

* Styling Scrollbar

* Adding globals.styl

* using react-simple-popover - tests

* Removing popover library

* Deep cloning objects on UserPreferencesExample

* Adding error messages on hotkeys form

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   ],
   "dependencies": {
     "classnames": "^2.2.6",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2"
   }
