--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-viewerbase",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Cornerstone medical image viewport component for React",
   "author": "Cornerstone Contributors",
   "license": "MIT",
@@ -35,7 +35,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@svgr/rollup": "^4.1.0",
-    "babel-eslint": "9.0.0",
+    "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
     "eslint": "5.6.0",
     "eslint-plugin-import": "^2.14.0",
@@ -52,8 +52,8 @@
     "rollup": "^0.68.2",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.3",
     "rollup-plugin-url": "^2.1.0",
