--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   ],
   "dependencies": {
     "classnames": "^2.2.6",
+    "lodash.isequal": "^4.5.0",
     "react-bootstrap-modal": "^4.2.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2"
