--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
-  	"@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
   ]
 }
