--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "lint-staged": "^8.1.0",
     "lodash.clonedeep": "^4.5.0",
     "prettier": "^1.15.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-scripts": "^2.1.2",
     "rollup": "^0.68.2",
     "rollup-plugin-babel": "^4.2.0",
@@ -86,9 +86,12 @@
     "@babel/runtime": "^7.2.0",
     "classnames": "^2.2.6",
     "lodash.isequal": "^4.5.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react-bootstrap-modal": "^4.2.0",
+    "react-dates": "^18.4.1",
     "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2"
+    "react-dnd-html5-backend": "^7.0.2",
+    "react-with-direction": "^1.3.0"
   }
 }
