Update package.json and republish (0.2.6)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-viewerbase",
-  "version": "0.2.5",
-  "description": "Cornerstone medical image viewport component for React",
-  "author": "Cornerstone Contributors",
+  "version": "0.2.6",
+  "description": "A set of React components for Medical Imaging Viewers",
+  "author": "OHIF Contributors",
   "license": "MIT",
-  "repository": "cornerstonejs/react-viewerbase",
+  "repository": "OHIF/react-viewerbase",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -16,6 +16,7 @@
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
+    "prepublishOnly": "npm run build",
     "start": "rollup -c -w",
     "lint": "eslint -c .eslintrc --fix src && prettier --single-quote --write src/**/*.{js,jsx,json,css}",
     "prepare": "npm run build",
