--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "npm": ">=5"
   },
   "scripts": {
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
@@ -23,45 +25,6 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "generateStaticSite": "./generateStaticSite.sh"
-  },
-  "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "@svgr/rollup": "^4.1.0",
-    "babel-eslint": "^9.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "5.12.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^2.0.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.0",
-    "lodash.clonedeep": "^4.5.0",
-    "prettier": "^1.15.3",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-scripts": "^2.1.5",
-    "rollup": "^0.68.2",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.3",
-    "rollup-plugin-url": "^2.1.0",
-    "stylelint": "^9.9.0",
-    "stylelint-config-recommended": "^2.1.0",
-    "stylus": "^0.54.5"
   },
   "husky": {
     "hooks": {
@@ -83,6 +46,10 @@
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0"
+  },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "classnames": "^2.2.6",
@@ -94,5 +61,47 @@
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-with-direction": "^1.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@mdx-js/tag": "^0.20.3",
+    "@svgr/rollup": "^4.1.0",
+    "acorn": "6.0.5",
+    "babel-eslint": "^9.0.0",
+    "cross-env": "^5.2.0",
+    "docz": "1.0.0-rc.8",
+    "docz-core": "1.0.0-rc.8",
+    "docz-plugin-css": "0.11.0",
+    "docz-theme-default": "1.0.0-rc.8",
+    "eslint": "5.12.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "lodash.clonedeep": "^4.5.0",
+    "prettier": "^1.15.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^2.1.5",
+    "rollup": "^0.68.2",
+    "rollup-plugin-babel": "^4.2.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.3",
+    "rollup-plugin-url": "^2.1.0",
+    "stylelint": "^9.9.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylus": "^0.54.5",
+    "webpack": "4.28.4"
   }
 }
