--- a/package.json
+++ b/package.json
@@ -51,16 +51,16 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
-    "classnames": "^2.2.6",
-    "lodash.isequal": "^4.5.0",
-    "moment": "^2.24.0",
-    "prop-types": "^15.6.2",
-    "react-bootstrap-modal": "^4.2.0",
-    "react-dates": "^18.4.1",
-    "react-dnd": "^7.0.2",
-    "react-dnd-html5-backend": "^7.0.2",
-    "react-with-direction": "^1.3.0"
+    "@babel/runtime": "7.2.0",
+    "classnames": "2.2.6",
+    "lodash.isequal": "4.5.0",
+    "moment": "2.24.0",
+    "prop-types": "15.6.2",
+    "react-bootstrap-modal": "4.2.0",
+    "react-dates": "18.4.1",
+    "react-dnd": "7.0.2",
+    "react-dnd-html5-backend": "7.0.2",
+    "react-with-direction": "1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
