--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "npm": ">=5"
   },
   "scripts": {
-    "docz:dev": "docz dev",
-    "docz:build": "docz build",
+    "dev": "docz dev",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
-    "prepublishOnly": "npm run build",
     "start": "rollup -c -w",
     "lint": "eslint -c .eslintrc --fix src && prettier --single-quote --write src/**/*.{js,jsx,json,css}",
-    "prepare": "npm run build",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build",
-    "generateStaticSite": "./generateStaticSite.sh"
+    "prepare": "yarn build",
+    "predeploy": "yarn install && docz build",
+    "prepublishOnly": "yarn build",
+    "deploy": "gh-pages -d .docz/dist"
   },
   "husky": {
     "hooks": {
