Add generateStaticSite command back until we can update Netlify

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prepare": "yarn build",
     "predeploy": "yarn install && docz build",
     "prepublishOnly": "yarn build",
-    "deploy": "gh-pages -d .docz/dist"
+    "deploy": "gh-pages -d .docz/dist",
+    "generateStaticSite": "yarn predeploy && cd .docz/dist"
   },
   "husky": {
     "hooks": {
