--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "predeploy": "yarn install && docz build",
     "prepublishOnly": "yarn build",
     "deploy": "gh-pages -d .docz/dist",
-    "generateStaticSite": "yarn predeploy && cd .docz/dist"
+    "generateStaticSite": "yarn predeploy && cpx '.docz/dist/**/*' examples/build -v"
   },
   "husky": {
     "hooks": {
@@ -72,6 +72,7 @@
     "@svgr/rollup": "^4.1.0",
     "acorn": "6.0.5",
     "babel-eslint": "^9.0.0",
+    "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "docz": "1.0.0-rc.8",
     "docz-core": "1.0.0-rc.8",
