Use built-in output path instead of cpx

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "predeploy": "yarn install && docz build",
     "prepublishOnly": "yarn build",
     "deploy": "gh-pages -d .docz/dist",
-    "generateStaticSite": "yarn predeploy && cpx '.docz/dist/**/*' example/build -v"
+    "generateStaticSite": "yarn predeploy"
   },
   "husky": {
     "hooks": {
