--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "dist"
   ],
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
@@ -73,7 +73,6 @@
     "@svgr/rollup": "^4.1.0",
     "acorn": "6.0.5",
     "babel-eslint": "^9.0.0",
-    "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "docz": "1.0.0-rc.8",
     "docz-core": "1.0.0-rc.8",
