Lock down react/react-dom versions

--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "lint-staged": "^8.1.0",
     "lodash.clonedeep": "^4.5.0",
     "prettier": "^1.15.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-powerplug": "1.0.0",
     "react-scripts": "^2.1.5",
     "rollup": "^0.68.2",
