--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,9 @@
 # “publish” is the directory to publish (relative to the root of your repo).
 
 YARN_FLAGS = "--no-ignore-optional"
+
+# COMMENT: This a rule for Single Page Applications
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
