Netlify installs on first grab, which triggers are yarn build
We don't need to repeat those steps when generating our site; we can just call docz build

--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "start": "rollup -c -w",
     "lint": "eslint -c .eslintrc --fix src && prettier --single-quote --write src/**/*.{js,jsx,json,css}",
     "prepare": "yarn build",
-    "predeploy": "yarn install && docz build",
     "prepublishOnly": "yarn build",
-    "generateStaticSite": "yarn predeploy"
+    "generateStaticSite": "docz build"
   },
   "husky": {
     "hooks": {
