--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,8 @@
 
 YARN_FLAGS = "--no-ignore-optional"
 YARN_VERSION = "1.15.2"
-NODE_VERSION = "v10.15.3"
 NODE_ENV = "development"
+environment = { NODE_VERSION = "10.15.3" }
 
 # COMMENT: This a rule for Single Page Applications
 [[redirects]]
