--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,10 @@
 # “command” is your build command.
 # “publish” is the directory to publish (relative to the root of your repo).
 
-YARN_FLAGS = "--no-ignore-optional"
-YARN_VERSION = "1.15.2"
+[build.environment]
+  NODE_VERSION = "10.15.3"
+  YARN_VERSION = "1.15.2"
+  YARN_FLAGS = "--no-ignore-optional --pure-lockfile"
 
 # COMMENT: This a rule for Single Page Applications
 [[redirects]]
