--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,8 @@
 # “command” is your build command.
 # “publish” is the directory to publish (relative to the root of your repo).
 
+# COMMENT: NODE_VERSION in root `.nvmrc` takes priority
+# COMMENT: Why we specify YARN_FLAGS: https://www.netlify.com/docs/build-gotchas/#yarn
 [build.environment]
   NODE_VERSION = "10.15.3"
   YARN_VERSION = "1.15.2"
