--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint -c .eslintrc --fix src && prettier --single-quote --write src/**/*.{js,jsx,json,css}",
     "prepare": "yarn build",
     "prepublishOnly": "yarn build",
-    "generateStaticSite": "docz build"
+    "generateStaticSite": "docz build && cpx 'example/build/public/icons.svg' example/build/icons.svg -v"
   },
   "husky": {
     "hooks": {
@@ -71,6 +71,7 @@
     "@svgr/rollup": "^4.1.0",
     "acorn": "6.0.5",
     "babel-eslint": "^9.0.0",
+    "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "docz": "1.0.0-rc.8",
     "docz-core": "1.0.0-rc.8",
