--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "babel-eslint": "^9.0.0",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
-    "docz": "1.0.0-rc.8",
-    "docz-core": "1.0.0-rc.8",
+    "docz": "1.0.0",
+    "docz-core": "1.0.0",
     "docz-plugin-css": "0.11.0",
-    "docz-theme-default": "1.0.0-rc.8",
+    "docz-theme-default": "1.0.0",
     "eslint": "5.12.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
