--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "lodash.clonedeep": "^4.5.0",
-    "prettier": "^1.15.3",
+    "prettier": "1.16.4",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-powerplug": "1.0.0",
