--- a/package.json
+++ b/package.json
@@ -78,8 +78,10 @@
     "docz-plugin-css": "0.11.0",
     "docz-theme-default": "1.0.0",
     "eslint": "5.12.0",
+    "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.3.1",
