--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "trailingComma": "es5",
   "printWidth": 80,
+  "proseWrap": "always",
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true
