--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
-    "recommendations": [
-        "esbenp.prettier-vscode"
-    ]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "sysoev.language-stylus",
+    "silvenon.mdx",
+    "dbaeumer.vscode-eslint"
+  ]
 }
