Add a publish job; append it to the 'cut_release' workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,15 @@ jobs:
           root: ~/repo
           paths: .
 
+    npm_publish:
+      <<: *defaults
+      steps:
+        - attach_workspace:
+            at: ~/repo
+        - run:
+            name: Publish using Semantic Release
+            command: npx semantic-release
+
 workflows:
   version: 2
 
@@ -66,3 +75,4 @@ workflows:
           filters:
             branches:
               only: master
+      - npm_publish
