--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,11 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - run:
+          name: Avoid hosts unknown for github
+          command:
+            mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking
+            no\n" > ~/.ssh/config
+      - run:
           name: Publish using Semantic Release
           command: npx semantic-release
 
