--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@svgr/rollup": "^4.1.0",
     "acorn": "6.0.5",
     "babel-eslint": "^9.0.0",
+    "commitizen": "3.0.7",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "docz": "1.0.0",
