--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": ">=5"
   },
   "scripts": {
+    "cm": "npx git-cz",
     "dev": "docz dev",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
