--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "commitizen": "3.0.7",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "2.1.0",
     "docz": "1.0.0",
     "docz-core": "1.0.0",
     "docz-plugin-css": "0.11.0",
@@ -106,5 +107,10 @@
     "stylelint-config-recommended": "^2.1.0",
     "stylus": "^0.54.5",
     "webpack": "4.28.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
