Set prettier endOfLine settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
     { "language": "javascript", "autoFix": true },
     { "language": "javascriptreact", "autoFix": true }
   ],
-  "prettier.disableLanguages": []
+  "prettier.disableLanguages": [],
+  "prettier.endOfLine": "lf"
 }
