--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "ie": "11"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "ie": "11"
+        }
       }
-    }],
+    ],
     "@babel/preset-react"
   ],
   "plugins": [
