--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "inline-react-svg",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-transform-runtime"
   ]
