--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@mdx-js/tag": "^0.20.3",
     "@svgr/rollup": "^4.1.0",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-inline-react-svg": "1.1.0",
     "commitizen": "3.0.7",
     "cpx": "1.5.0",
     "cross-env": "^5.2.0",
