--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   ],
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "ohif-i18n": "file:.yalc/ohif-i18n"
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
