--- a/package.json
+++ b/package.json
@@ -47,19 +47,23 @@
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "ohif-i18n": "file:.yalc/ohif-i18n"
+    "@ohif/i18n": "file:.yalc/@ohif/i18n",
+    "i18next": "^17.0.3",
+    "react-i18next": "^10.11.0"
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
+    "@ohif/i18n": "file:.yalc/@ohif/i18n",
     "classnames": "2.2.6",
+    "i18next": "^17.0.3",
     "lodash.isequal": "4.5.0",
     "moment": "2.24.0",
-    "ohif-i18n": "file:.yalc/ohif-i18n",
     "prop-types": "15.6.2",
     "react-bootstrap-modal": "4.2.0",
     "react-dates": "18.4.1",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
+    "react-i18next": "^10.11.0",
     "react-with-direction": "1.3.0"
   },
   "devDependencies": {
@@ -88,13 +92,11 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.3.1",
-    "i18next": "^15.1.3",
     "lint-staged": "^8.1.0",
     "lodash.clonedeep": "^4.5.0",
     "prettier": "1.16.4",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-i18next": "^10.11.0",
     "react-powerplug": "1.0.0",
     "react-scripts": "^2.1.5",
     "rollup": "^0.68.2",
