--- a/package.json
+++ b/package.json
@@ -45,15 +45,15 @@
     "dist"
   ],
   "peerDependencies": {
+    "@ohif/i18n": "0.0.1-rc-001",
+    "i18next": "^17.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "@ohif/i18n": "file:.yalc/@ohif/i18n",
-    "i18next": "^17.0.3",
     "react-i18next": "^10.11.0"
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@ohif/i18n": "file:.yalc/@ohif/i18n",
+    "@ohif/i18n": "0.0.1-rc-001",
     "classnames": "2.2.6",
     "i18next": "^17.0.3",
     "lodash.isequal": "4.5.0",
