--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@ohif/i18n": "0.0.1-rc-001",
+    "@ohif/i18n": "file:.yalc/@ohif/i18n",
     "classnames": "2.2.6",
     "i18next": "^17.0.3",
     "lodash.isequal": "4.5.0",
