--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "@ohif/i18n": "0.0.1-rc-001",
+    "@ohif/i18n": "^0.0.1",
     "i18next": "^17.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -53,9 +53,10 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@ohif/i18n": "file:.yalc/@ohif/i18n",
+    "@ohif/i18n": "0.0.1",
     "classnames": "2.2.6",
     "i18next": "^17.0.3",
+    "i18next-browser-languagedetector": "^3.0.1",
     "lodash.isequal": "4.5.0",
     "moment": "2.24.0",
     "prop-types": "15.6.2",
