--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@mdx-js/tag": "^0.20.3",
+    "autoprefixer": "^9.6.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-inline-react-svg": "1.1.0",
     "commitizen": "3.0.7",
