--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/607793?v=4",
       "profile": "https://github.com/swederik",
       "contributions": [
-        "code"
+        "code",
+        "maintenance"
       ]
     }
   ],
