--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -48,6 +48,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "EsrefDurna",
+      "name": "Esref Durna",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1230575?v=4",
+      "profile": "https://www.linkedin.com/in/siliconvalleynextgeneration/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
