--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -57,6 +57,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "pieper",
+      "name": "Steve Pieper",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/126077?v=4",
+      "profile": "http://www.isomics.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
