fix(react-dnd): lib issue with jest
After upgrading the react-dnd version, an issue came up while running tests.

It was necessary to add a param in the test script for them to pass.

For further information, please check the following link:
https://github.com/react-dnd/react-dnd/issues/1396

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "cm": "npx git-cz",
     "dev": "docz dev",
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "cross-env CI=1 react-scripts test --env=jsdom --transformIgnorePatterns \"node_modules/(?!react-dnd)/\"",
+    "test:watch": "react-scripts test --env=jsdom --transformIgnorePatterns \"node_modules/(?!react-dnd)/\"",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "lint": "eslint -c .eslintrc --fix src && prettier --single-quote --write src/**/*.{js,jsx,json,css}",
