--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "cm": "npx git-cz",
     "dev": "docz dev",
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "cross-env CI=1 react-scripts test --env=jsdom --transformIgnorePatterns \"node_modules/(?!react-dnd)/\"",
+    "test:watch": "react-scripts test --env=jsdom --transformIgnorePatterns \"node_modules/(?!react-dnd)/\"",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "lint": "eslint -c .eslintrc --fix src && prettier --single-quote --write src/**/*.{js,jsx,json,css}",
@@ -47,7 +47,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "@ohif/i18n": "^0.1.0",
+    "@ohif/i18n": "^0.1.1",
     "i18next": "^17.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@ohif/i18n": "^0.1.0",
+    "@ohif/i18n": "^0.1.1",
     "classnames": "2.2.6",
     "i18next": "^17.0.3",
     "i18next-browser-languagedetector": "^3.0.1",
@@ -65,7 +65,7 @@
     "prop-types": "15.6.2",
     "react-bootstrap-modal": "4.2.0",
     "react-dates": "18.4.1",
-    "react-dnd": "7.0.2",
+    "react-dnd": "8.0.3",
     "react-dnd-touch-backend": "^0.8.3",
     "react-i18next": "^10.11.0",
     "react-with-direction": "1.3.0"
