--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "@ohif/i18n": "^0.1.1",
+    "@ohif/i18n": "0.2.1",
     "i18next": "^17.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@ohif/i18n": "^0.1.1",
+    "@ohif/i18n": "0.2.1",
     "classnames": "2.2.6",
     "i18next": "^17.0.3",
     "i18next-browser-languagedetector": "^3.0.1",
